completed swagger ui car_ endpoints
